Gallen Heart Detector project

--- a/M4_Feature_Eng/03. Numerical Enc/2. Notebooks/08fe2.ipynb
+++ b/M4_Feature_Eng/03. Numerical Enc/2. Notebooks/08fe2.ipynb
@@ -20,6 +20,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=303*0.25\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "execution": {
