--- a/M4_Feature_Eng/03. Numerical Enc/2. Notebooks/08fe3.ipynb
+++ b/M4_Feature_Eng/03. Numerical Enc/2. Notebooks/08fe3.ipynb
@@ -1370,7 +1370,7 @@
     "                              \"RMSE\":  metrics.mean_squared_error(y_valid,preds,squared=True),#mean square error squared,\n",
     "                              \"Time\":  total_time},\n",
     "                              ignore_index=True)\n",
-    "\n",
+    "np.sqrt(metrics.mean_squared_error(y_valid, preds))\n",
     "    \n",
     "    results_ord = results.sort_values(by=['RMSE'], ascending=True, ignore_index=True)\n",
     "    results_ord.index += 1 \n",
